#18299 codacy feedback and some documentation